app-test/testdata/typesystem/neg/type-comparison-algebraic-type-with-any-type/check/cmp1.check
Error in "testdata/typesystem/neg/type-comparison-algebraic-type-with-any-type/src/cmp.cal" on line 6:
            OUT <-- T(1, false) = A; // error
                    ^^^^^^^^^^^^^^^
= is not supported with T and U.